Refactor project structure, added login and signup logic + bug fixes

--- a/src/styles/Login_Signup.css
+++ b/src/styles/Login_Signup.css
@@ -15,7 +15,7 @@ html {
 
 body {
     min-height: 100vh;
-    background-image: url("./assets/evening.jpg");
+    background-image: url("../assets/evening.jpg");
     background-size: cover;
     background-position: right;
     overflow: hidden;
