Migrating from supabase to SQL for better compability with the server

--- a/src/styles/Login_Signup.css
+++ b/src/styles/Login_Signup.css
@@ -13,19 +13,20 @@ html {
     text-align: center;
 }
 
-body {
-    min-height: 100vh;
-    background-image: url("../assets/evening.jpg");
-    background-size: cover;
-    background-position: right;
-    overflow: hidden;
-    margin: 0;
-}
-
 .wrapper {
     background-color: rgb(0, 0, 0);
     height: 100vh;
     width: max(30%, 300px);
     padding: 10px;
     border-radius: 0 20px 20px 0;
+}
+
+.backImage {
+    background-image: url('../assets/beach.jpg');
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
